--- a/consensus/Cargo.toml
+++ b/consensus/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2021"
 rand = "0.8"
 rand_distr = "0.4"
 tracing = { version = "0.1", features = ["release_max_level_info"] }
+serde = { version = "1.0.217", features = ["derive"] }
 
 [dependencies.tracing-subscriber]
 version = "0.3"
